--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,6 @@
 <resources>
     <!--  paddings-->
+    <dimen name="padding_1">1dp</dimen>
     <dimen name="padding_2">2dp</dimen>
     <dimen name="padding_3">3dp</dimen>
     <dimen name="padding_4">4dp</dimen>
