--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,51 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/drawer_layout"
+<nl.psdcompany.duonavigationdrawer.views.DuoDrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/drawer"
+
+    app:marginFactor="0.75"
+
+    app:menuAlphaClosed="0.0"
+    app:menuAlphaOpen="1.0"
+
+    app:clickToCloseScale="1.0"
+
+    app:menuScaleClosed="1.1"
+    app:menuScaleOpen="1.0"
+
+    app:contentScaleClosed="1.0"
+    app:contentScaleOpen="0.80"
+
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
-    tools:openDrawer="start">
-
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:fitsSystemWindows="true">
-
-        <include
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true" />
-
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_below="@id/toolbar"
-            >
-
-            <FrameLayout
-                android:id="@+id/container"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" />
-
-        </FrameLayout>
-
-
-    </RelativeLayout>
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:id="@+id/llyLeftDrawer"
-        android:layout_width="270dp"
         android:layout_height="match_parent"
-        android:layout_gravity="start">
+        android:background="#a31818"
+        android:layout_width="match_parent"
+        android:tag="@string/tag_menu"
+        >
 
         <include
             android:id="@+id/nav_view"
+            layout="@layout/drawer_layout_navigation"
+            />
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:tag="@string/tag_content">
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="?attr/actionBarSize"
+            android:background="#a31818"
+            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+
+        <FrameLayout
+            android:id="@+id/container"
+            android:elevation="@dimen/margin_5"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@android:color/white"
+            android:padding="?attr/listPreferredItemPaddingRight" />
     </LinearLayout>
 
 
-</android.support.v4.widget.DrawerLayout>
+
+</nl.psdcompany.duonavigationdrawer.views.DuoDrawerLayout>
