--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,17 +1,27 @@
-<?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.iqmojo.MainActivity_1">
+    android:orientation="vertical"
+    android:padding="@dimen/padding_40">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!" />
-</RelativeLayout>
+
+
+        <com.iqmojo.base.ui.widgets.AutoResizeTextView
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:ellipsize="none"
+            android:maxLines="2"
+            android:text="Auto Resized Text, max 2 lines"
+            android:textSize="100sp" /> <!-- maximum size -->
+
+        <com.iqmojo.base.ui.widgets.AutoResizeTextView
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:ellipsize="none"
+            android:gravity="center"
+            android:maxLines="1"
+            android:text="Auto Resized Text, max 1 line ibie bui iubir ibr ibiuer"
+            android:textSize="100sp" /> <!-- maximum size -->
+
+</LinearLayout>
