--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,9 @@
     <color name="colorPrimary">#6d0202</color>
     <color name="colorPrimaryDark">#a31818</color>
     <color name="colorAccent">#ffffff</color>
+    <color name="white">#ffffff</color>
+    <color name="transparent">#00000000</color>
+    <color name="semi_transparent">#99000000</color>
+    <color name="black_color">#000000</color>
+    <color name="otp_button">#280805</color>
 </resources>
