--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -25,6 +25,8 @@
     <dimen name="padding_34">34dp</dimen>
     <dimen name="padding_35">35dp</dimen>
     <dimen name="padding_40">40dp</dimen>
+    <dimen name="padding_45">45dp</dimen>
+    <dimen name="padding_47">47dp</dimen>
     <dimen name="padding_50">50dp</dimen>
     <dimen name="padding_55">55dp</dimen>
     <dimen name="padding_60">60dp</dimen>
@@ -33,6 +35,10 @@
     <dimen name="padding_80">80dp</dimen>
     <dimen name="padding_85">85dp</dimen>
     <dimen name="padding_90">90dp</dimen>
+    <dimen name="padding_120">120dp</dimen>
+    <dimen name="padding_140">140dp</dimen>
+    <dimen name="padding_150">150dp</dimen>
+    <dimen name="padding_160">160dp</dimen>
 
     <!--  Text sizes-->
     <dimen name="text_size_8sp">8sp</dimen>
