--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -35,6 +35,7 @@
     <dimen name="padding_80">80dp</dimen>
     <dimen name="padding_85">85dp</dimen>
     <dimen name="padding_90">90dp</dimen>
+    <dimen name="padding_100">100dp</dimen>
     <dimen name="padding_120">120dp</dimen>
     <dimen name="padding_140">140dp</dimen>
     <dimen name="padding_150">150dp</dimen>
