--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -21,8 +21,8 @@
         android:layout_height="40dp"
         android:elevation="@dimen/padding_3"
         android:layout_below="@id/imvLogo"
-        android:layout_marginLeft="@dimen/padding_50"
-        android:layout_marginRight="@dimen/padding_50"
+        android:layout_marginLeft="@dimen/left_right_margin_for_edittext"
+        android:layout_marginRight="@dimen/left_right_margin_for_edittext"
         android:layout_marginTop="@dimen/padding_140"
         android:background="@drawable/white_shape">
 
@@ -88,8 +88,8 @@
         android:layout_height="40dp"
         android:elevation="@dimen/padding_3"
         android:layout_below="@id/rlyLine"
-        android:layout_marginLeft="@dimen/padding_50"
-        android:layout_marginRight="@dimen/padding_50"
+        android:layout_marginLeft="@dimen/left_right_margin_for_edittext"
+        android:layout_marginRight="@dimen/left_right_margin_for_edittext"
         android:background="@drawable/white_shape">
         <TextView
             android:layout_width="wrap_content"
