--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -84,4 +84,10 @@
     <dimen name="margin_75dp">75dp</dimen>
     <dimen name="margin_85dp">85dp</dimen>
     <dimen name="margin_100dp">100dp</dimen>
+    <!-- Default screen margins, per the Android Design guidelines. -->
+    <dimen name="activity_horizontal_margin">16dp</dimen>
+    <dimen name="activity_vertical_margin">16dp</dimen>
+
+    <dimen name="bottom_line">0.80dp</dimen>
+    <dimen name="left_right_margin_for_edittext">50dp</dimen>
 </resources>
