--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -40,13 +40,12 @@
         android:orientation="vertical"
         android:tag="@string/tag_content">
 
-        <android.support.v7.widget.Toolbar
+        <include
             android:id="@+id/toolbar"
+            layout="@layout/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="#a31818"
-            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true" />
 
         <FrameLayout
             android:id="@+id/container"
