--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -47,13 +47,28 @@
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true" />
 
-        <FrameLayout
-            android:id="@+id/container"
-            android:elevation="@dimen/margin_5"
+        <android.support.design.widget.TabLayout
+            android:id="@+id/tabs"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@android:color/white"
-            android:padding="?attr/listPreferredItemPaddingRight" />
+            android:layout_height="@dimen/tab_height"
+            app:tabMode="fixed"
+            android:background="@color/white"
+            app:tabGravity="fill"/>
+
+
+        <android.support.v4.view.ViewPager
+            android:id="@+id/pager"
+            android:background="@color/white"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+
+        <!--<FrameLayout-->
+            <!--android:id="@+id/container"-->
+            <!--android:elevation="@dimen/margin_5"-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:background="@android:color/white"-->
+            <!--android:padding="?attr/listPreferredItemPaddingRight" />-->
     </LinearLayout>
 
 
