--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -73,6 +73,8 @@
     <dimen name="margin_17">17dp</dimen>
     <dimen name="margin_18">18dp</dimen>
     <dimen name="margin_20">20dp</dimen>
+    <dimen name="margin_21">21dp</dimen>
+    <dimen name="margin_22">22dp</dimen>
     <dimen name="margin_25dp">25dp</dimen>
     <dimen name="margin_22dp">22dp</dimen>
     <dimen name="margin_30dp">30dp</dimen>
@@ -90,4 +92,6 @@
 
     <dimen name="bottom_line">0.80dp</dimen>
     <dimen name="left_right_margin_for_edittext">50dp</dimen>
+    <dimen name="tab_height">65dp</dimen>
+    <dimen name="card_radius">8dp</dimen>
 </resources>
