--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,9 +5,9 @@
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorAccent">@color/colorPrimaryDark</item>
         <item name="colorControlHighlight">@color/colorAccent</item>
-        <item name="colorControlActivated">@color/white</item>
+        <item name="colorControlActivated">@color/colorPrimaryDark</item>
         <item name="colorControlNormal">@color/colorPrimaryDark</item>
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
@@ -21,6 +21,13 @@
 
     <style name="SplashTheme" parent="AppTheme">
         <item name="android:windowDisablePreview">true</item>
+    </style>
+
+    <style name="cardViewStyle" parent="Base.CardView">
+        <item name="android:layout_marginLeft">@dimen/margin_15</item>
+        <item name="android:layout_marginRight">@dimen/margin_15</item>
+        <item name="cardCornerRadius">@dimen/card_radius</item>
+        <item name="android:background">@drawable/grey_gradient_bg_corners</item>
     </style>
 
 </resources>
