--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -13,4 +13,14 @@
         android:layout_centerInParent="true"
         android:scaleType="center"
         />
+
+    <ProgressBar
+        android:id="@+id/pbLoading"
+        style="@android:style/Widget.Holo.ProgressBar.Small"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="@dimen/padding_120"
+        android:visibility="gone" />
 </RelativeLayout>
