--- a/app/src/main/res/layout/activity_enter_mobile.xml
+++ b/app/src/main/res/layout/activity_enter_mobile.xml
@@ -64,9 +64,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="number"
+                android:layout_centerVertical="true"
                 android:layout_toRightOf="@+id/imvMobile"
-                android:backgroundTint="@null"
                 android:gravity="center"
+                android:background="@null"
                 android:hint="@string/enter_your_mobile_number"
                 android:textColor="@color/white"
                 android:textColorHint="@color/white"
@@ -77,7 +78,7 @@
             <View
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/bottom_line"
-                android:layout_below="@id/edtMobile"
+                android:layout_below="@id/imvMobile"
                 android:background="@color/white"/>
 
         </RelativeLayout>
