--- a/app/src/main/res/layout/drawer_layout_navigation.xml
+++ b/app/src/main/res/layout/drawer_layout_navigation.xml
@@ -8,42 +8,68 @@
     android:orientation="vertical">
 
 
+    <RelativeLayout
+        android:id="@+id/drawer_header"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimaryDark"
+        android:gravity="center"
+        android:padding="@dimen/padding_10">
+
+
+
+        <ImageView
+            android:id="@+id/imvProfilePic"
+            android:layout_width="80dp"
+            android:layout_height="70dp"
+            android:layout_margin="@dimen/margin_10"
+            />
+
+        <TextView
+            android:id="@+id/txvUserName"
+            android:layout_width="match_parent"
+            android:layout_marginTop="@dimen/padding_30"
+            android:layout_marginLeft="@dimen/padding_10"
+            android:layout_marginStart="@dimen/padding_10"
+            android:layout_height="wrap_content"
+            android:textColor="@color/white"
+            android:text="Shubham Lamba"
+            android:layout_toRightOf="@id/imvProfilePic"
+            android:layout_toEndOf="@id/imvProfilePic"
+            android:textSize="@dimen/profile_name"
+            />
+
+
+
+        <TextView
+            android:id="@+id/txvUserEmail"
+            android:layout_width="match_parent"
+            android:layout_marginLeft="@dimen/padding_10"
+            android:layout_marginStart="@dimen/padding_10"
+            android:layout_height="wrap_content"
+            android:text="shubham.lba@gmail.com"
+            android:layout_marginTop="@dimen/margin_7"
+            android:textColor="@color/white"
+            android:layout_below="@id/txvUserName"
+            android:layout_toRightOf="@id/imvProfilePic"
+            android:layout_toEndOf="@id/imvProfilePic"
+            android:textSize="@dimen/form_textsize"
+            />
+
+
+    </RelativeLayout>
 
     <ListView
         android:id="@+id/listView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@id/bottom"
         android:layout_marginBottom="@dimen/padding_5"
+        android:layout_marginTop="@dimen/margin_15"
+        android:layout_below="@id/drawer_header"
         android:dividerHeight="0dp"
         />
 
-    <LinearLayout
-        android:id="@+id/bottom"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="@dimen/padding_5"
-        android:gravity="center"
-        android:orientation="horizontal">
 
-        <ImageView
-            android:id="@+id/imvfb"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="@dimen/padding_10"
-            android:layout_marginRight="@dimen/padding_10"
-            android:padding="@dimen/padding_10"
-             />
-
-        <ImageView
-            android:id="@+id/imvtwitter"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="@dimen/padding_10"
-             />
-
-    </LinearLayout>
 
 
 </RelativeLayout>
