--- a/app/src/main/res/values-hdpi/dimens.xml
+++ b/app/src/main/res/values-hdpi/dimens.xml
@@ -5,5 +5,6 @@
     <dimen name="app_text_size">12sp</dimen>
     <dimen name="expiry_text_size">11sp</dimen>
     <dimen name="profile_name_text_size">20sp</dimen>
+    <dimen name="profile_name">18sp</dimen>
     <dimen name="drawer_text_size">16sp</dimen>
 </resources>
