--- a/app/src/main/res/values-xhdpi/dimens.xml
+++ b/app/src/main/res/values-xhdpi/dimens.xml
@@ -4,5 +4,6 @@
     <dimen name="app_text_size">14sp</dimen>
     <dimen name="expiry_text_size">13sp</dimen>
     <dimen name="profile_name_text_size">24sp</dimen>
+    <dimen name="profile_name">22sp</dimen>
     <dimen name="drawer_text_size">18sp</dimen>
 </resources>
