--- a/app/src/main/res/values-xxhdpi/dimens.xml
+++ b/app/src/main/res/values-xxhdpi/dimens.xml
@@ -4,6 +4,7 @@
     <dimen name="app_text_size">15sp</dimen>
     <dimen name="expiry_text_size">14sp</dimen>
     <dimen name="profile_name_text_size">24sp</dimen>
+    <dimen name="profile_name">22sp</dimen>
     <dimen name="drawer_text_size">20sp</dimen>
 
 
