--- a/app/src/main/res/layout/activity_enter_mobile.xml
+++ b/app/src/main/res/layout/activity_enter_mobile.xml
@@ -29,6 +29,7 @@
             android:layout_width="wrap_content"
             android:layout_height="40dp"
             android:visibility="visible"
+            android:typeface="monospace"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
             android:layout_marginBottom="@dimen/padding_120"
@@ -64,6 +65,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="number"
+                android:typeface="monospace"
                 android:layout_centerVertical="true"
                 android:layout_toRightOf="@+id/imvMobile"
                 android:gravity="center"
