--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -6,71 +6,46 @@
     android:layout_height="?attr/actionBarSize"
     android:layout_alignParentTop="true"
     android:background="?attr/colorPrimaryDark"
-    android:gravity="center_vertical"
-    android:paddingRight="@dimen/padding_10"
-    android:elevation="@dimen/padding_5"
-    android:paddingEnd="@dimen/padding_10"
-    android:paddingLeft="@dimen/padding_10"
-    android:paddingStart="@dimen/padding_10"
-    android:contentInsetStart="0dp"
-    android:contentInsetLeft="0dp"
-    app:contentInsetLeft="0dp"
-    app:contentInsetStart="0dp"
-    android:contentInsetRight="0dp"
     android:contentInsetEnd="0dp"
-    app:contentInsetRight="0dp"
+    android:contentInsetLeft="0dp"
+    android:contentInsetRight="0dp"
+    android:contentInsetStart="0dp"
+    android:elevation="@dimen/padding_5"
+    android:gravity="center_vertical"
+    android:paddingEnd="@dimen/padding_10"
+    android:paddingRight="@dimen/padding_10"
     app:contentInsetEnd="0dp"
-    app:theme="@style/ThemeOverlay.AppCompat.Dark"
+    app:contentInsetLeft="0dp"
+    app:contentInsetRight="0dp"
+    app:contentInsetStart="0dp"
+    app:contentInsetStartWithNavigation="0dp"
+    android:contentInsetStartWithNavigation="0dp"
     app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-    >
+    app:theme="@style/ThemeOverlay.AppCompat.Dark">
 
-    <!--<ImageView-->
-    <!--android:id="@+id/homeORback"-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_gravity="start"-->
-    <!--android:padding="@dimen/padding_5"-->
-    <!--android:contentDescription="@string/app_name"-->
-    <!--android:src="@mipmap/budgermenu"-->
-    <!--android:visibility="visible" />-->
-
-    <TextView
-        android:id="@+id/toolbar_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_margin="@dimen/padding_5"
-        android:text="@string/app_name"
-        android:textColor="@color/white"
-        android:textSize="@dimen/form_textsize" />
-
-    <TextView
-        android:id="@+id/txvLogin"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Login"
-        android:layout_marginRight="@dimen/padding_2"
-        android:layout_marginEnd="@dimen/padding_2"
-        android:layout_gravity="end"
-        android:gravity="top"
-        android:visibility="gone"
-        android:textSize="@dimen/expiry_text_size"
-        android:textColor="@color/colorPrimary"
-        android:paddingTop="@dimen/padding_3"
-        android:paddingBottom="@dimen/padding_3"
-        android:paddingLeft="@dimen/padding_13"
-        android:paddingRight="@dimen/padding_13"
-        />
 
     <ImageView
         android:id="@+id/logout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="@dimen/padding_5"
-        android:layout_marginRight="@dimen/padding_2"
-        android:layout_marginEnd="@dimen/padding_2"
         android:layout_gravity="end"
+        android:layout_marginEnd="@dimen/padding_2"
+        android:layout_marginRight="@dimen/padding_2"
         android:contentDescription="@string/app_name"
-        android:visibility="gone" />
+        android:padding="@dimen/padding_5"
+        android:src="@drawable/menu_0"
+        android:visibility="visible" />
+    <TextView
+        android:id="@+id/txvCoins"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="13,200"
+        android:layout_marginRight="@dimen/margin_8"
+        android:layout_gravity="end"
+        android:typeface="serif"
+        android:textColor="@color/white"
+        android:textSize="@dimen/drawer_text_size"
+        />
+
 
 </android.support.v7.widget.Toolbar>
