--- a/app/src/main/res/layout/activity_enter_otp.xml
+++ b/app/src/main/res/layout/activity_enter_otp.xml
@@ -33,6 +33,7 @@
                 android:paddingTop="@dimen/margin_10"
                 android:paddingBottom="@dimen/margin_10"
                 android:textSize="@dimen/app_text_size"
+                android:typeface="monospace"
                 android:text="Didn't get the code ? "/>
 
             <TextView
@@ -41,6 +42,7 @@
                 android:layout_height="match_parent"
                 android:textColor="@color/otp_button"
                 android:paddingTop="@dimen/margin_10"
+                android:typeface="monospace"
                 android:paddingBottom="@dimen/margin_10"
                 android:textSize="@dimen/app_text_size"
                 android:text=" Resend code"/>
@@ -60,6 +62,7 @@
             android:layout_width="wrap_content"
             android:layout_height="40dp"
             android:visibility="visible"
+            android:typeface="monospace"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
             android:layout_marginBottom="@dimen/padding_120"
@@ -96,6 +99,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="number"
+                android:typeface="monospace"
                 android:layout_toRightOf="@+id/imvMobile"
                 android:layout_centerVertical="true"
                 android:gravity="center"
