--- a/app/src/main/res/layout/custom_tab_layout.xml
+++ b/app/src/main/res/layout/custom_tab_layout.xml
@@ -19,6 +19,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Home"
+        android:typeface="sans"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="@dimen/margin_2"
         android:textColor="@color/grey_text_color"
