--- a/app/src/main/res/layout/hamburger_list_item.xml
+++ b/app/src/main/res/layout/hamburger_list_item.xml
@@ -14,12 +14,16 @@
         android:layout_alignWithParentIfMissing="true"
         android:layout_centerVertical="true"
         android:padding="@dimen/padding_12"
+        android:typeface="monospace"
+        android:drawablePadding="20dp"
         android:layout_marginLeft="@dimen/padding_5"
+        android:lineSpacingMultiplier="1.2"
         android:layout_marginTop="@dimen/padding_2"
         android:layout_marginBottom="@dimen/padding_2"
         android:layout_marginStart="@dimen/padding_5"
+        android:paddingRight="@dimen/margin_30dp"
+        android:paddingEnd="@dimen/margin_30dp"
         android:gravity="center_vertical"
-        android:maxLines="1"
         android:clickable="true"
         android:background="?attr/selectableItemBackground"
         android:textColor="@color/white"
